fixing ⭐ Product Card Title overflowing & Edit Product Modal image picker position

--- a/scss/components/edit-product-modal.scss
+++ b/scss/components/edit-product-modal.scss
@@ -48,7 +48,6 @@
             font-size: 2rem;
             color: gray;
             font-weight: 500;
-            position: relative;
          }
 
          button {
