--- a/scss/components/produtos-card.scss
+++ b/scss/components/produtos-card.scss
@@ -24,6 +24,7 @@
 
    h2 {
       font-size: 3rem;
+      word-break: break-all;
    }
 
    .produto-card__prazo-label {
